hphp/hack/test/typecheck/contravariant_this3.php.out
File "contravariant_this3.php", line 8, characters 22-25:
The "this" type cannot be used in this contravariant position because its enclosing class "C" is final and has a variant type parameter "T" (Typing[4158])
